<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ee.oyatl.ime.make.settings.preference.PreferenceCategory
        app:title="@string/pref_layout_header_soft_keyboard_title">

        <ee.oyatl.ime.make.settings.preference.ListPreference
            app:key="layout_screen_type"
            app:defaultValue="@string/pref_layout_screen_type_default"
            app:entries="@array/layout_screen_types"
            app:entryValues="@array/layout_screen_type_values"
            app:title="@string/pref_layout_screen_type_title"
            app:useSimpleSummaryProvider="true" />

        <ee.oyatl.ime.make.settings.preference.EnterKeyboardSettingsPreference
            app:fileName="@string/preset_file_latin_soft"
            app:template="preset/preset_latin_qwerty.yaml"
            app:title="@string/pref_layout_latin_settings_title" />

        <ee.oyatl.ime.make.settings.preference.EnterKeyboardSettingsPreference
            app:fileName="@string/preset_file_hangul_soft"
            app:template="preset/preset_3set_390.yaml"
            app:title="@string/pref_layout_hangul_settings_title" />

        <ee.oyatl.ime.make.settings.preference.EnterKeyboardSettingsPreference
            app:fileName="@string/preset_file_symbol_soft"
            app:template="preset/preset_symbol_g.yaml"
            app:title="@string/pref_layout_symbol_settings_title" />

    </ee.oyatl.ime.make.settings.preference.PreferenceCategory>

    <ee.oyatl.ime.make.settings.preference.PreferenceCategory
        app:title="@string/pref_layout_header_hard_keyboard_title">

        <ee.oyatl.ime.make.settings.preference.EnterKeyboardSettingsPreference
            app:fileName="@string/preset_file_latin_hard"
            app:template="preset/preset_latin_qwerty.yaml"
            app:hardware="true"
            app:title="@string/pref_layout_hard_latin_settings_title" />

        <ee.oyatl.ime.make.settings.preference.EnterKeyboardSettingsPreference
            app:fileName="@string/preset_file_hangul_hard"
            app:template="preset/preset_3set_390.yaml"
            app:hardware="true"
            app:title="@string/pref_layout_hard_hangul_settings_title" />

        <ee.oyatl.ime.make.settings.preference.HotkeyDialogPreference
            app:key="behaviour_hardware_lang_switch_hotkey"
            app:defaultValue="1,62"
            app:title="@string/pref_behaviour_hardware_lang_switch_hotkey_title" />

    </ee.oyatl.ime.make.settings.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>